Phase 2/y.output
Terminais não utilizados na gramática

   RESERVED


Gramática

    0 $accept: Prog $end

    1 Prog: ProgHeading ';' ProgBlock '.'

    2 ProgHeading: PROGRAM ID '(' OUTPUT ')'

    3 ProgBlock: varPart funcPart StatPart

    4 varPart: VAR VarDeclaration ';' VarDeclarationRepeat
    5        | %empty

    6 VarDeclarationRepeat: VarDeclarationRepeat VarDeclaration ';'
    7                     | %empty

    8 VarDeclaration: IDList ':' ID

    9 IDList: ID IDListRepeat

   10 IDListRepeat: IDListRepeat ',' ID
   11             | %empty

   12 funcPart: funcPart FuncDeclaration ';'
   13         | %empty

   14 FuncDeclaration: FuncHeading ';' FORWARD
   15                | FUNCTION ID ';' FuncBlock
   16                | FuncHeading ';' FuncBlock

   17 FuncHeading: FUNCTION ID FormalParamList ':' ID

   18 FormalParamList: '(' FormalParams FormalParamListRepeat ')'
   19                | %empty

   20 FormalParamListRepeat: FormalParamListRepeat ';' FormalParams
   21                      | %empty

   22 FormalParams: VAR IDList ':' ID
   23             | IDList ':' ID

   24 FuncBlock: varPart StatPart

   25 StatPart: BEG StatList END

   26 StatList: StatList ';' Stat
   27         | Stat

   28 Stat: StatPart
   29     | IF Expr THEN Stat
   30     | IF Expr THEN Stat ELSE Stat
   31     | WHILE Expr DO Stat
   32     | REPEAT StatList UNTIL Expr
   33     | VAL '(' PARAMSTR '(' Expr ')' ',' ID ')'
   34     | ID ASSIGN Expr
   35     | WRITELN WriteInPList
   36     | %empty

   37 WriteInPList: '(' Expr WriteInPListOptional ')'
   38             | '(' STRING WriteInPListOptional ')'
   39             | %empty

   40 WriteInPListOptional: WriteInPListOptional ',' Expr
   41                     | WriteInPListOptional ',' STRING
   42                     | %empty

   43 Expr: Expr OP2 Expr
   44     | Expr OP3 Expr
   45     | Expr OP4 Expr
   46     | OP3 Expr
   47     | NOT Expr
   48     | '(' Expr ')'
   49     | INTEGER
   50     | REAL
   51     | ID ParamList

   52 ParamList: '(' Expr ParamListOptional ')'
   53          | %empty

   54 ParamListOptional: ParamListOptional ',' Expr
   55                  | %empty


Terminais, com as regras aonde aparecem

$end (0) 0
'(' (40) 2 18 33 37 38 48 52
')' (41) 2 18 33 37 38 48 52
',' (44) 10 33 40 41 54
'.' (46) 1
':' (58) 8 17 22 23
';' (59) 1 4 6 12 14 15 16 20 26
error (256)
BEG (258) 25
DO (259) 31
IF (260) 29 30
THEN (261) 29 30
ELSE (262) 30
END (263) 25
FORWARD (264) 14
FUNCTION (265) 15 17
OUTPUT (266) 2
PARAMSTR (267) 33
REPEAT (268) 32
UNTIL (269) 32
VAR (270) 4 22
VAL (271) 33
WHILE (272) 31
WRITELN (273) 35
PROGRAM (274) 2
ASSIGN (275) 34
NOT (276) 47
OP2 (277) 43
OP3 (278) 44 46
OP4 (279) 45
ID (280) 2 8 9 10 15 17 22 23 33 34 51
STRING (281) 38 41
INTEGER (282) 49
REAL (283) 50
RESERVED (284)
IFX (285)


Não-terminais, com as regras aonde aparecem

$accept (37)
    à esquerda: 0
Prog (38)
    à esquerda: 1, à direita: 0
ProgHeading (39)
    à esquerda: 2, à direita: 1
ProgBlock (40)
    à esquerda: 3, à direita: 1
varPart (41)
    à esquerda: 4 5, à direita: 3 24
VarDeclarationRepeat (42)
    à esquerda: 6 7, à direita: 4 6
VarDeclaration (43)
    à esquerda: 8, à direita: 4 6
IDList (44)
    à esquerda: 9, à direita: 8 22 23
IDListRepeat (45)
    à esquerda: 10 11, à direita: 9 10
funcPart (46)
    à esquerda: 12 13, à direita: 3 12
FuncDeclaration (47)
    à esquerda: 14 15 16, à direita: 12
FuncHeading (48)
    à esquerda: 17, à direita: 14 16
FormalParamList (49)
    à esquerda: 18 19, à direita: 17
FormalParamListRepeat (50)
    à esquerda: 20 21, à direita: 18 20
FormalParams (51)
    à esquerda: 22 23, à direita: 18 20
FuncBlock (52)
    à esquerda: 24, à direita: 15 16
StatPart (53)
    à esquerda: 25, à direita: 3 24 28
StatList (54)
    à esquerda: 26 27, à direita: 25 26 32
Stat (55)
    à esquerda: 28 29 30 31 32 33 34 35 36, à direita: 26 27 29 30
    31
WriteInPList (56)
    à esquerda: 37 38 39, à direita: 35
WriteInPListOptional (57)
    à esquerda: 40 41 42, à direita: 37 38 40 41
Expr (58)
    à esquerda: 43 44 45 46 47 48 49 50 51, à direita: 29 30 31 32
    33 34 37 40 43 44 45 46 47 48 52 54
ParamList (59)
    à esquerda: 52 53, à direita: 51
ParamListOptional (60)
    à esquerda: 54 55, à direita: 52 54


State 0

    0 $accept: . Prog $end

    PROGRAM  fazer shift, e ir para o estado 1

    Prog         ir para o estado 2
    ProgHeading  ir para o estado 3


State 1

    2 ProgHeading: PROGRAM . ID '(' OUTPUT ')'

    ID  fazer shift, e ir para o estado 4


State 2

    0 $accept: Prog . $end

    $end  fazer shift, e ir para o estado 5


State 3

    1 Prog: ProgHeading . ';' ProgBlock '.'

    ';'  fazer shift, e ir para o estado 6


State 4

    2 ProgHeading: PROGRAM ID . '(' OUTPUT ')'

    '('  fazer shift, e ir para o estado 7


State 5

    0 $accept: Prog $end .

    $default  aceite


State 6

    1 Prog: ProgHeading ';' . ProgBlock '.'

    VAR  fazer shift, e ir para o estado 8

    $default  reduzir usando a regra 5 (varPart)

    ProgBlock  ir para o estado 9
    varPart    ir para o estado 10


State 7

    2 ProgHeading: PROGRAM ID '(' . OUTPUT ')'

    OUTPUT  fazer shift, e ir para o estado 11


State 8

    4 varPart: VAR . VarDeclaration ';' VarDeclarationRepeat

    ID  fazer shift, e ir para o estado 12

    VarDeclaration  ir para o estado 13
    IDList          ir para o estado 14


State 9

    1 Prog: ProgHeading ';' ProgBlock . '.'

    '.'  fazer shift, e ir para o estado 15


State 10

    3 ProgBlock: varPart . funcPart StatPart

    $default  reduzir usando a regra 13 (funcPart)

    funcPart  ir para o estado 16


State 11

    2 ProgHeading: PROGRAM ID '(' OUTPUT . ')'

    ')'  fazer shift, e ir para o estado 17


State 12

    9 IDList: ID . IDListRepeat

    $default  reduzir usando a regra 11 (IDListRepeat)

    IDListRepeat  ir para o estado 18


State 13

    4 varPart: VAR VarDeclaration . ';' VarDeclarationRepeat

    ';'  fazer shift, e ir para o estado 19


State 14

    8 VarDeclaration: IDList . ':' ID

    ':'  fazer shift, e ir para o estado 20


State 15

    1 Prog: ProgHeading ';' ProgBlock '.' .

    $default  reduzir usando a regra 1 (Prog)


State 16

    3 ProgBlock: varPart funcPart . StatPart
   12 funcPart: funcPart . FuncDeclaration ';'

    BEG       fazer shift, e ir para o estado 21
    FUNCTION  fazer shift, e ir para o estado 22

    FuncDeclaration  ir para o estado 23
    FuncHeading      ir para o estado 24
    StatPart         ir para o estado 25


State 17

    2 ProgHeading: PROGRAM ID '(' OUTPUT ')' .

    $default  reduzir usando a regra 2 (ProgHeading)


State 18

    9 IDList: ID IDListRepeat .
   10 IDListRepeat: IDListRepeat . ',' ID

    ','  fazer shift, e ir para o estado 26

    $default  reduzir usando a regra 9 (IDList)


State 19

    4 varPart: VAR VarDeclaration ';' . VarDeclarationRepeat

    $default  reduzir usando a regra 7 (VarDeclarationRepeat)

    VarDeclarationRepeat  ir para o estado 27


State 20

    8 VarDeclaration: IDList ':' . ID

    ID  fazer shift, e ir para o estado 28


State 21

   25 StatPart: BEG . StatList END

    BEG      fazer shift, e ir para o estado 21
    IF       fazer shift, e ir para o estado 29
    REPEAT   fazer shift, e ir para o estado 30
    VAL      fazer shift, e ir para o estado 31
    WHILE    fazer shift, e ir para o estado 32
    WRITELN  fazer shift, e ir para o estado 33
    ID       fazer shift, e ir para o estado 34

    $default  reduzir usando a regra 36 (Stat)

    StatPart  ir para o estado 35
    StatList  ir para o estado 36
    Stat      ir para o estado 37


State 22

   15 FuncDeclaration: FUNCTION . ID ';' FuncBlock
   17 FuncHeading: FUNCTION . ID FormalParamList ':' ID

    ID  fazer shift, e ir para o estado 38


State 23

   12 funcPart: funcPart FuncDeclaration . ';'

    ';'  fazer shift, e ir para o estado 39


State 24

   14 FuncDeclaration: FuncHeading . ';' FORWARD
   16                | FuncHeading . ';' FuncBlock

    ';'  fazer shift, e ir para o estado 40


State 25

    3 ProgBlock: varPart funcPart StatPart .

    $default  reduzir usando a regra 3 (ProgBlock)


State 26

   10 IDListRepeat: IDListRepeat ',' . ID

    ID  fazer shift, e ir para o estado 41


State 27

    4 varPart: VAR VarDeclaration ';' VarDeclarationRepeat .
    6 VarDeclarationRepeat: VarDeclarationRepeat . VarDeclaration ';'

    ID  fazer shift, e ir para o estado 12

    $default  reduzir usando a regra 4 (varPart)

    VarDeclaration  ir para o estado 42
    IDList          ir para o estado 14


State 28

    8 VarDeclaration: IDList ':' ID .

    $default  reduzir usando a regra 8 (VarDeclaration)


State 29

   29 Stat: IF . Expr THEN Stat
   30     | IF . Expr THEN Stat ELSE Stat

    NOT      fazer shift, e ir para o estado 43
    OP3      fazer shift, e ir para o estado 44
    ID       fazer shift, e ir para o estado 45
    INTEGER  fazer shift, e ir para o estado 46
    REAL     fazer shift, e ir para o estado 47
    '('      fazer shift, e ir para o estado 48

    Expr  ir para o estado 49


State 30

   32 Stat: REPEAT . StatList UNTIL Expr

    BEG      fazer shift, e ir para o estado 21
    IF       fazer shift, e ir para o estado 29
    REPEAT   fazer shift, e ir para o estado 30
    VAL      fazer shift, e ir para o estado 31
    WHILE    fazer shift, e ir para o estado 32
    WRITELN  fazer shift, e ir para o estado 33
    ID       fazer shift, e ir para o estado 34

    $default  reduzir usando a regra 36 (Stat)

    StatPart  ir para o estado 35
    StatList  ir para o estado 50
    Stat      ir para o estado 37


State 31

   33 Stat: VAL . '(' PARAMSTR '(' Expr ')' ',' ID ')'

    '('  fazer shift, e ir para o estado 51


State 32

   31 Stat: WHILE . Expr DO Stat

    NOT      fazer shift, e ir para o estado 43
    OP3      fazer shift, e ir para o estado 44
    ID       fazer shift, e ir para o estado 45
    INTEGER  fazer shift, e ir para o estado 46
    REAL     fazer shift, e ir para o estado 47
    '('      fazer shift, e ir para o estado 48

    Expr  ir para o estado 52


State 33

   35 Stat: WRITELN . WriteInPList

    '('  fazer shift, e ir para o estado 53

    $default  reduzir usando a regra 39 (WriteInPList)

    WriteInPList  ir para o estado 54


State 34

   34 Stat: ID . ASSIGN Expr

    ASSIGN  fazer shift, e ir para o estado 55


State 35

   28 Stat: StatPart .

    $default  reduzir usando a regra 28 (Stat)


State 36

   25 StatPart: BEG StatList . END
   26 StatList: StatList . ';' Stat

    END  fazer shift, e ir para o estado 56
    ';'  fazer shift, e ir para o estado 57


State 37

   27 StatList: Stat .

    $default  reduzir usando a regra 27 (StatList)


State 38

   15 FuncDeclaration: FUNCTION ID . ';' FuncBlock
   17 FuncHeading: FUNCTION ID . FormalParamList ':' ID

    ';'  fazer shift, e ir para o estado 58
    '('  fazer shift, e ir para o estado 59

    $default  reduzir usando a regra 19 (FormalParamList)

    FormalParamList  ir para o estado 60


State 39

   12 funcPart: funcPart FuncDeclaration ';' .

    $default  reduzir usando a regra 12 (funcPart)


State 40

   14 FuncDeclaration: FuncHeading ';' . FORWARD
   16                | FuncHeading ';' . FuncBlock

    FORWARD  fazer shift, e ir para o estado 61
    VAR      fazer shift, e ir para o estado 8

    $default  reduzir usando a regra 5 (varPart)

    varPart    ir para o estado 62
    FuncBlock  ir para o estado 63


State 41

   10 IDListRepeat: IDListRepeat ',' ID .

    $default  reduzir usando a regra 10 (IDListRepeat)


State 42

    6 VarDeclarationRepeat: VarDeclarationRepeat VarDeclaration . ';'

    ';'  fazer shift, e ir para o estado 64


State 43

   47 Expr: NOT . Expr

    NOT      fazer shift, e ir para o estado 43
    OP3      fazer shift, e ir para o estado 44
    ID       fazer shift, e ir para o estado 45
    INTEGER  fazer shift, e ir para o estado 46
    REAL     fazer shift, e ir para o estado 47
    '('      fazer shift, e ir para o estado 48

    Expr  ir para o estado 65


State 44

   46 Expr: OP3 . Expr

    NOT      fazer shift, e ir para o estado 43
    OP3      fazer shift, e ir para o estado 44
    ID       fazer shift, e ir para o estado 45
    INTEGER  fazer shift, e ir para o estado 46
    REAL     fazer shift, e ir para o estado 47
    '('      fazer shift, e ir para o estado 48

    Expr  ir para o estado 66


State 45

   51 Expr: ID . ParamList

    '('  fazer shift, e ir para o estado 67

    $default  reduzir usando a regra 53 (ParamList)

    ParamList  ir para o estado 68


State 46

   49 Expr: INTEGER .

    $default  reduzir usando a regra 49 (Expr)


State 47

   50 Expr: REAL .

    $default  reduzir usando a regra 50 (Expr)


State 48

   48 Expr: '(' . Expr ')'

    NOT      fazer shift, e ir para o estado 43
    OP3      fazer shift, e ir para o estado 44
    ID       fazer shift, e ir para o estado 45
    INTEGER  fazer shift, e ir para o estado 46
    REAL     fazer shift, e ir para o estado 47
    '('      fazer shift, e ir para o estado 48

    Expr  ir para o estado 69


State 49

   29 Stat: IF Expr . THEN Stat
   30     | IF Expr . THEN Stat ELSE Stat
   43 Expr: Expr . OP2 Expr
   44     | Expr . OP3 Expr
   45     | Expr . OP4 Expr

    THEN  fazer shift, e ir para o estado 70
    OP2   fazer shift, e ir para o estado 71
    OP3   fazer shift, e ir para o estado 72
    OP4   fazer shift, e ir para o estado 73


State 50

   26 StatList: StatList . ';' Stat
   32 Stat: REPEAT StatList . UNTIL Expr

    UNTIL  fazer shift, e ir para o estado 74
    ';'    fazer shift, e ir para o estado 57


State 51

   33 Stat: VAL '(' . PARAMSTR '(' Expr ')' ',' ID ')'

    PARAMSTR  fazer shift, e ir para o estado 75


State 52

   31 Stat: WHILE Expr . DO Stat
   43 Expr: Expr . OP2 Expr
   44     | Expr . OP3 Expr
   45     | Expr . OP4 Expr

    DO   fazer shift, e ir para o estado 76
    OP2  fazer shift, e ir para o estado 71
    OP3  fazer shift, e ir para o estado 72
    OP4  fazer shift, e ir para o estado 73


State 53

   37 WriteInPList: '(' . Expr WriteInPListOptional ')'
   38             | '(' . STRING WriteInPListOptional ')'

    NOT      fazer shift, e ir para o estado 43
    OP3      fazer shift, e ir para o estado 44
    ID       fazer shift, e ir para o estado 45
    STRING   fazer shift, e ir para o estado 77
    INTEGER  fazer shift, e ir para o estado 46
    REAL     fazer shift, e ir para o estado 47
    '('      fazer shift, e ir para o estado 48

    Expr  ir para o estado 78


State 54

   35 Stat: WRITELN WriteInPList .

    $default  reduzir usando a regra 35 (Stat)


State 55

   34 Stat: ID ASSIGN . Expr

    NOT      fazer shift, e ir para o estado 43
    OP3      fazer shift, e ir para o estado 44
    ID       fazer shift, e ir para o estado 45
    INTEGER  fazer shift, e ir para o estado 46
    REAL     fazer shift, e ir para o estado 47
    '('      fazer shift, e ir para o estado 48

    Expr  ir para o estado 79


State 56

   25 StatPart: BEG StatList END .

    $default  reduzir usando a regra 25 (StatPart)


State 57

   26 StatList: StatList ';' . Stat

    BEG      fazer shift, e ir para o estado 21
    IF       fazer shift, e ir para o estado 29
    REPEAT   fazer shift, e ir para o estado 30
    VAL      fazer shift, e ir para o estado 31
    WHILE    fazer shift, e ir para o estado 32
    WRITELN  fazer shift, e ir para o estado 33
    ID       fazer shift, e ir para o estado 34

    $default  reduzir usando a regra 36 (Stat)

    StatPart  ir para o estado 35
    Stat      ir para o estado 80


State 58

   15 FuncDeclaration: FUNCTION ID ';' . FuncBlock

    VAR  fazer shift, e ir para o estado 8

    $default  reduzir usando a regra 5 (varPart)

    varPart    ir para o estado 62
    FuncBlock  ir para o estado 81


State 59

   18 FormalParamList: '(' . FormalParams FormalParamListRepeat ')'

    VAR  fazer shift, e ir para o estado 82
    ID   fazer shift, e ir para o estado 12

    IDList        ir para o estado 83
    FormalParams  ir para o estado 84


State 60

   17 FuncHeading: FUNCTION ID FormalParamList . ':' ID

    ':'  fazer shift, e ir para o estado 85


State 61

   14 FuncDeclaration: FuncHeading ';' FORWARD .

    $default  reduzir usando a regra 14 (FuncDeclaration)


State 62

   24 FuncBlock: varPart . StatPart

    BEG  fazer shift, e ir para o estado 21

    StatPart  ir para o estado 86


State 63

   16 FuncDeclaration: FuncHeading ';' FuncBlock .

    $default  reduzir usando a regra 16 (FuncDeclaration)


State 64

    6 VarDeclarationRepeat: VarDeclarationRepeat VarDeclaration ';' .

    $default  reduzir usando a regra 6 (VarDeclarationRepeat)


State 65

   43 Expr: Expr . OP2 Expr
   44     | Expr . OP3 Expr
   45     | Expr . OP4 Expr
   47     | NOT Expr .

    OP2  fazer shift, e ir para o estado 71
    OP3  fazer shift, e ir para o estado 72
    OP4  fazer shift, e ir para o estado 73

    $default  reduzir usando a regra 47 (Expr)


State 66

   43 Expr: Expr . OP2 Expr
   44     | Expr . OP3 Expr
   45     | Expr . OP4 Expr
   46     | OP3 Expr .

    OP2  fazer shift, e ir para o estado 71
    OP3  fazer shift, e ir para o estado 72
    OP4  fazer shift, e ir para o estado 73

    $default  reduzir usando a regra 46 (Expr)


State 67

   52 ParamList: '(' . Expr ParamListOptional ')'

    NOT      fazer shift, e ir para o estado 43
    OP3      fazer shift, e ir para o estado 44
    ID       fazer shift, e ir para o estado 45
    INTEGER  fazer shift, e ir para o estado 46
    REAL     fazer shift, e ir para o estado 47
    '('      fazer shift, e ir para o estado 48

    Expr  ir para o estado 87


State 68

   51 Expr: ID ParamList .

    $default  reduzir usando a regra 51 (Expr)


State 69

   43 Expr: Expr . OP2 Expr
   44     | Expr . OP3 Expr
   45     | Expr . OP4 Expr
   48     | '(' Expr . ')'

    OP2  fazer shift, e ir para o estado 71
    OP3  fazer shift, e ir para o estado 72
    OP4  fazer shift, e ir para o estado 73
    ')'  fazer shift, e ir para o estado 88


State 70

   29 Stat: IF Expr THEN . Stat
   30     | IF Expr THEN . Stat ELSE Stat

    BEG      fazer shift, e ir para o estado 21
    IF       fazer shift, e ir para o estado 29
    REPEAT   fazer shift, e ir para o estado 30
    VAL      fazer shift, e ir para o estado 31
    WHILE    fazer shift, e ir para o estado 32
    WRITELN  fazer shift, e ir para o estado 33
    ID       fazer shift, e ir para o estado 34

    $default  reduzir usando a regra 36 (Stat)

    StatPart  ir para o estado 35
    Stat      ir para o estado 89


State 71

   43 Expr: Expr OP2 . Expr

    NOT      fazer shift, e ir para o estado 43
    OP3      fazer shift, e ir para o estado 44
    ID       fazer shift, e ir para o estado 45
    INTEGER  fazer shift, e ir para o estado 46
    REAL     fazer shift, e ir para o estado 47
    '('      fazer shift, e ir para o estado 48

    Expr  ir para o estado 90


State 72

   44 Expr: Expr OP3 . Expr

    NOT      fazer shift, e ir para o estado 43
    OP3      fazer shift, e ir para o estado 44
    ID       fazer shift, e ir para o estado 45
    INTEGER  fazer shift, e ir para o estado 46
    REAL     fazer shift, e ir para o estado 47
    '('      fazer shift, e ir para o estado 48

    Expr  ir para o estado 91


State 73

   45 Expr: Expr OP4 . Expr

    NOT      fazer shift, e ir para o estado 43
    OP3      fazer shift, e ir para o estado 44
    ID       fazer shift, e ir para o estado 45
    INTEGER  fazer shift, e ir para o estado 46
    REAL     fazer shift, e ir para o estado 47
    '('      fazer shift, e ir para o estado 48

    Expr  ir para o estado 92


State 74

   32 Stat: REPEAT StatList UNTIL . Expr

    NOT      fazer shift, e ir para o estado 43
    OP3      fazer shift, e ir para o estado 44
    ID       fazer shift, e ir para o estado 45
    INTEGER  fazer shift, e ir para o estado 46
    REAL     fazer shift, e ir para o estado 47
    '('      fazer shift, e ir para o estado 48

    Expr  ir para o estado 93


State 75

   33 Stat: VAL '(' PARAMSTR . '(' Expr ')' ',' ID ')'

    '('  fazer shift, e ir para o estado 94


State 76

   31 Stat: WHILE Expr DO . Stat

    BEG      fazer shift, e ir para o estado 21
    IF       fazer shift, e ir para o estado 29
    REPEAT   fazer shift, e ir para o estado 30
    VAL      fazer shift, e ir para o estado 31
    WHILE    fazer shift, e ir para o estado 32
    WRITELN  fazer shift, e ir para o estado 33
    ID       fazer shift, e ir para o estado 34

    $default  reduzir usando a regra 36 (Stat)

    StatPart  ir para o estado 35
    Stat      ir para o estado 95


State 77

   38 WriteInPList: '(' STRING . WriteInPListOptional ')'

    $default  reduzir usando a regra 42 (WriteInPListOptional)

    WriteInPListOptional  ir para o estado 96


State 78

   37 WriteInPList: '(' Expr . WriteInPListOptional ')'
   43 Expr: Expr . OP2 Expr
   44     | Expr . OP3 Expr
   45     | Expr . OP4 Expr

    OP2  fazer shift, e ir para o estado 71
    OP3  fazer shift, e ir para o estado 72
    OP4  fazer shift, e ir para o estado 73

    $default  reduzir usando a regra 42 (WriteInPListOptional)

    WriteInPListOptional  ir para o estado 97


State 79

   34 Stat: ID ASSIGN Expr .
   43 Expr: Expr . OP2 Expr
   44     | Expr . OP3 Expr
   45     | Expr . OP4 Expr

    OP2  fazer shift, e ir para o estado 71
    OP3  fazer shift, e ir para o estado 72
    OP4  fazer shift, e ir para o estado 73

    $default  reduzir usando a regra 34 (Stat)


State 80

   26 StatList: StatList ';' Stat .

    $default  reduzir usando a regra 26 (StatList)


State 81

   15 FuncDeclaration: FUNCTION ID ';' FuncBlock .

    $default  reduzir usando a regra 15 (FuncDeclaration)


State 82

   22 FormalParams: VAR . IDList ':' ID

    ID  fazer shift, e ir para o estado 12

    IDList  ir para o estado 98


State 83

   23 FormalParams: IDList . ':' ID

    ':'  fazer shift, e ir para o estado 99


State 84

   18 FormalParamList: '(' FormalParams . FormalParamListRepeat ')'

    $default  reduzir usando a regra 21 (FormalParamListRepeat)

    FormalParamListRepeat  ir para o estado 100


State 85

   17 FuncHeading: FUNCTION ID FormalParamList ':' . ID

    ID  fazer shift, e ir para o estado 101


State 86

   24 FuncBlock: varPart StatPart .

    $default  reduzir usando a regra 24 (FuncBlock)


State 87

   43 Expr: Expr . OP2 Expr
   44     | Expr . OP3 Expr
   45     | Expr . OP4 Expr
   52 ParamList: '(' Expr . ParamListOptional ')'

    OP2  fazer shift, e ir para o estado 71
    OP3  fazer shift, e ir para o estado 72
    OP4  fazer shift, e ir para o estado 73

    $default  reduzir usando a regra 55 (ParamListOptional)

    ParamListOptional  ir para o estado 102


State 88

   48 Expr: '(' Expr ')' .

    $default  reduzir usando a regra 48 (Expr)


State 89

   29 Stat: IF Expr THEN Stat .
   30     | IF Expr THEN Stat . ELSE Stat

    ELSE  fazer shift, e ir para o estado 103

    $default  reduzir usando a regra 29 (Stat)


State 90

   43 Expr: Expr . OP2 Expr
   43     | Expr OP2 Expr .
   44     | Expr . OP3 Expr
   45     | Expr . OP4 Expr

    OP3  fazer shift, e ir para o estado 72
    OP4  fazer shift, e ir para o estado 73

    $default  reduzir usando a regra 43 (Expr)


State 91

   43 Expr: Expr . OP2 Expr
   44     | Expr . OP3 Expr
   44     | Expr OP3 Expr .
   45     | Expr . OP4 Expr

    OP4  fazer shift, e ir para o estado 73

    $default  reduzir usando a regra 44 (Expr)


State 92

   43 Expr: Expr . OP2 Expr
   44     | Expr . OP3 Expr
   45     | Expr . OP4 Expr
   45     | Expr OP4 Expr .

    $default  reduzir usando a regra 45 (Expr)


State 93

   32 Stat: REPEAT StatList UNTIL Expr .
   43 Expr: Expr . OP2 Expr
   44     | Expr . OP3 Expr
   45     | Expr . OP4 Expr

    OP2  fazer shift, e ir para o estado 71
    OP3  fazer shift, e ir para o estado 72
    OP4  fazer shift, e ir para o estado 73

    $default  reduzir usando a regra 32 (Stat)


State 94

   33 Stat: VAL '(' PARAMSTR '(' . Expr ')' ',' ID ')'

    NOT      fazer shift, e ir para o estado 43
    OP3      fazer shift, e ir para o estado 44
    ID       fazer shift, e ir para o estado 45
    INTEGER  fazer shift, e ir para o estado 46
    REAL     fazer shift, e ir para o estado 47
    '('      fazer shift, e ir para o estado 48

    Expr  ir para o estado 104


State 95

   31 Stat: WHILE Expr DO Stat .

    $default  reduzir usando a regra 31 (Stat)


State 96

   38 WriteInPList: '(' STRING WriteInPListOptional . ')'
   40 WriteInPListOptional: WriteInPListOptional . ',' Expr
   41                     | WriteInPListOptional . ',' STRING

    ')'  fazer shift, e ir para o estado 105
    ','  fazer shift, e ir para o estado 106

